Agent - fanuc iSeries/Fwlib/150/FWLIB32.BAS


' pmc_rdalmmsg:read PMC alarm message
Type ODBPMCALM
    sAlmmsg As String * 128
End Type

' pmc_getdtailerr:get detail error for pmc
Type ODBPMCERR
  nErr_no As Integer
  nErr_dtno As Integer
End Type


'--------------------------
' HSSB multiple connection
'--------------------------

' cnc_rdnodeinfo:read node informations
Type ODBNODE
 nNode_no As Long
 nIo_base As Long
 nStatus As Long
 nCnc_type As Long
 sNode_name As String * 20
End Type


'-------------------------------------
' CNC: Control axis / spindle related
'-------------------------------------

' read actual axis feedrate(F)
Declare Function cnc_actf% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBACT )

' read absolute axis position
Declare Function cnc_absolute% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS )

' read machine axis position
Declare Function cnc_machine% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS )

' read relative axis position
Declare Function cnc_relative% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS )

' read distance to go
Declare Function cnc_distance% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS )

' read skip position
Declare Function cnc_skip% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS )

' read servo delay value
Declare Function cnc_srvdelay% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS )

' read acceleration/deceleration delay value
Declare Function cnc_accdecdly% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS )

' read all dynamic data
#If ONO8D Then
Declare Function cnc_rddynamic% Lib "fwlib32.dll" Alias "cnc_rddynamico8" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As Any)
#Else
Declare Function cnc_rddynamic% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As Any)
#End If

' read actual spindle speed(S)
Declare Function cnc_acts% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBACT )

' set origin / preset relative axis position
Declare Function cnc_wrrelpos% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IDBWRR )

' preset work coordinate
Declare Function cnc_prstwkcd% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IDBWRA )

' read manual overlapped motion value
Declare Function cnc_rdmovrlap% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBOVL )

' cancel manual overlapped motion value
Declare Function cnc_canmovrlap% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read load information of serial spindle
Declare Function cnc_rdspload% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As ODBSPN )

' read maximum r.p.m. ratio of serial spindle
Declare Function cnc_rdspmaxrpm% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As ODBSPN )

' read gear ratio of serial spindle
Declare Function cnc_rdspgear% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As ODBSPN )

' read absolute axis position 2
Declare Function cnc_absolute2% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS )

' read relative axis position 2
Declare Function cnc_relative2% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS )


'----------------------
' CNC: Program related
'----------------------

' start downloading NC program
Declare Function cnc_dwnstart% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' download NC program
Declare Function cnc_download% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b% )

' download NC program(conditional)
Declare Function cnc_cdownload% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b% )

' end of downloading NC program
Declare Function cnc_dwnend% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' end of downloading NC program
Declare Function cnc_dwnend2% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' start verification of NC program
Declare Function cnc_vrfstart% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' verify NC program
Declare Function cnc_verify% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b% )

' verify NC program(conditional)
Declare Function cnc_cverify% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b% )

' end of verification
Declare Function cnc_vrfend% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' start downloading DNC program
Declare Function cnc_dncstart% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' download DNC program
Declare Function cnc_dnc% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b& )

' download DNC program(conditional)
Declare Function cnc_cdnc% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b& )

' end of downloading DNC program
Declare Function cnc_dncend% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' start downloading DNC program 2
Declare Function cnc_dncstart2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' download DNC program 2
Declare Function cnc_dnc2% Lib "fwlib32.dll" (ByVal FlibHndl%, a&, ByVal b$)

' end of downloading DNC program 2
Declare Function cnc_dncend2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a% )

' read the diagnosis data of DNC operation
Declare Function cnc_rddncdgndt% Lib "fwlib32.dll" (ByVal FlibHndl%, odb As ODBDNCDGN)

' start uploading NC program
#If ONO8D Then
Declare Function cnc_upstart% Lib "fwlib32.dll" Alias "cnc_upstarto8" (ByVal FlibHndl%, ByVal a&)
#Else
Declare Function cnc_upstart% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)
#End If

' upload NC program
Declare Function cnc_upload% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBUP, a& )

' upload NC program(conditional)
Declare Function cnc_cupload% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBUP, a& )

' end of uploading NC program
Declare Function cnc_upend% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read buffer status for downloading/verification NC program
Declare Function cnc_buff% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBBUF )

' search specified program
#If ONO8D Then
Declare Function cnc_search% Lib "fwlib32.dll" Alias "cnc_searcho8" (ByVal FlibHndl%, ByVal a&)
#Else
Declare Function cnc_search% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)
#End If

' delete all programs
Declare Function cnc_delall% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' delete specified program
#If ONO8D Then
Declare Function cnc_delete% Lib "fwlib32.dll" Alias "cnc_deleteo8" (ByVal FlibHndl%, ByVal a&)
#Else
Declare Function cnc_delete% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)
#End If

' read program directory
#If ONO8D Then
Declare Function cnc_rdprogdir% Lib "fwlib32.dll" Alias "cnc_rdprogdiro8" (ByVal FlibHndl%, ByVal a%, ByVal b&, ByVal c&, ByVal d&, Odb As PRGDIR)
#Else
Declare Function cnc_rdprogdir% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d&, Odb As PRGDIR)
#End If

' read program information
Declare Function cnc_rdproginfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As Any )

' read program number under execution
#If ONO8D Then
Declare Function cnc_rdprgnum% Lib "fwlib32.dll" Alias "cnc_rdprgnumo8" (ByVal FlibHndl%, Odb As ODBPRO)
#Else
Declare Function cnc_rdprgnum% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBPRO)
#End If

' read sequence number under execution
Declare Function cnc_rdseqnum% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBSEQ )
' search specified sequence number
Declare Function cnc_seqsrch% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a& )

' rewind cursor of NC program
Declare Function cnc_rewind% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read block counter
Declare Function cnc_rdblkcount% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read program under execution
Declare Function cnc_rdexecprog% Lib "fwlib32.dll" ( ByVal FlibHndl%, a&, b%, ByVal c$ )

' write program for MDI operation
Declare Function cnc_wrmdiprog% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b$ )

' read execution pointer for MDI operation
#If ONO8D Then
Declare Function cnc_rdmdipntr% Lib "fwlib32.dll" Alias "cnc_rdmdipntro8" (ByVal FlibHndl%, Odb As ODBMDIP)
#Else
Declare Function cnc_rdmdipntr% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBMDIP)
#End If

' write execution pointer for MDI operation
Declare Function cnc_wrmdipntr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a& )


'---------------------------
' CNC: NC file data related
'---------------------------

' read tool offset value
Declare Function cnc_rdtofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As ODBTOFS )

' write tool offset value
Declare Function cnc_wrtofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d& )

' read tool offset value(area specified)
Declare Function cnc_rdtofsr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As Any )

' write tool offset value(area specified)
Declare Function cnc_wrtofsr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As Any )

' read work zero offset value
Declare Function cnc_rdzofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBZOFS )

' write work zero offset value
Declare Function cnc_wrzofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBZOFS )

' read work zero offset value(area specified)
Declare Function cnc_rdzofsr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As IODBZOR )

' write work zero offset value(area specified)
Declare Function cnc_wrzofsr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBZOR )

' read parameter
Declare Function cnc_rdparam% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As Any )

' write parameter
Declare Function cnc_wrparam% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As Any )

' read parameter(area specified)
Declare Function cnc_rdparar% Lib "fwlib32.dll" ( ByVal FlibHndl%, a%, ByVal b%, c%, d%, Odb As Any )

' write parameter(area specified)
Declare Function cnc_wrparas% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As Any )

' read setting data
Declare Function cnc_rdset% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As Any )

' write setting data
Declare Function cnc_wrset% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As Any )

' read setting data(area specified)
Declare Function cnc_rdsetr% Lib "fwlib32.dll" ( ByVal FlibHndl%, a%, ByVal b%, c%, d%, Odb As Any )

' write setting data(area specified)
Declare Function cnc_wrsets% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As Any )

' read pitch error compensation data(area specified)
Declare Function cnc_rdpitchr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBPI )

' write pitch error compensation data(area specified)
Declare Function cnc_wrpitchr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBPI )

' read custom macro variable
Declare Function cnc_rdmacro% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBM )

' write custom macro variable
Declare Function cnc_wrmacro% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d% )

' read custom macro variables(area specified)
Declare Function cnc_rdmacror% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBMR )

' write custom macro variables(area specified)
Declare Function cnc_wrmacror% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBMR )

' read P code macro variable
Declare Function cnc_rdpmacro% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, Odb As ODBPM )

' write P code macro variable
Declare Function cnc_wrpmacro% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b&, ByVal c% )

' read P code macro variables(area specified)
Declare Function cnc_rdpmacror% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b&, ByVal c&, Odb As IODBPR )

' write P code macro variables(area specified)
Declare Function cnc_wrpmacror% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, Idb As IODBPR )

' read tool offset information
Declare Function cnc_rdtofsinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBTLINF )
